// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DEPRECATED / Molecules / PillButton (use Button.Pill instead) Default usage 1`] = `
.c0 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c0,
.c0[type='button'],
.c0[type='reset'],
.c0[type='submit'] {
  -webkit-appearance: button;
}

.c0::-moz-focus-inner,
.c0[type='button']::-moz-focus-inner,
.c0[type='reset']::-moz-focus-inner,
.c0[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0:-moz-focusring,
.c0[type='button']:-moz-focusring,
.c0[type='reset']:-moz-focusring,
.c0[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  background-color: #336BFF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c1::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c1:hover {
  background-color: #2650BF;
}

.c1:active {
  background-color: #1F4099;
}

.c2 {
  border-radius: 12px;
}

.c2::before {
  display: none;
}

<button
  className="c0 c1 c2"
  onClick={[Function]}
  type="button"
>
  <span>
    <div
      className="Typography__Span-sc-10mju41-0 c3"
    >
      PillButton
    </div>
  </span>
</button>
`;

exports[`Storyshots DEPRECATED / Molecules / PillButton (use Button.Pill instead) Links looking like PillButtons 1`] = `
.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  background-color: #336BFF;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c4:hover {
  background-color: #2650BF;
}

.c4:active {
  background-color: #1F4099;
}

.c4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  background-color: transparent;
  color: #336BFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #336BFF;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c8:hover {
  color: #2650BF;
}

.c8:hover::before {
  border-color: #2650BF;
}

.c8:active {
  color: #1F4099;
}

.c8:active::before {
  border-color: #1F4099;
}

.c8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  border-radius: 12px;
}

.c5::before {
  display: none;
}

.c9 {
  border-radius: 12px;
  background-color: #F5F5F5;
  color: #336BFF;
}

.c9:hover {
  color: #2650BF;
  background-color: #F5F5F5;
}

.c9:active {
  color: #1F4099;
  background-color: #F5F5F5;
}

.c9::before {
  display: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c7 {
  background: white;
  padding: 12px;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        Go to BlaBla
      </span>
    </div>
    <div>
      <a
        className="c4 c5"
        href="/?path=/docs/molecules-pillbutton--pill-buttons-composed-in-a-group"
        onClick={[Function]}
      >
        <span>
          <div
            className="Typography__Span-sc-10mju41-0 c6"
          >
            BlaBla
          </div>
        </span>
      </a>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        Go to external BliBli
      </span>
    </div>
    <div>
      <div
        className="c7"
      >
        <a
          className="c8 c9"
          href="https://nordnet.se"
          onClick={[Function]}
          rel="noopener noreferrer nofollow"
          target="_blank"
        >
          <span>
            <div
              className="Typography__Span-sc-10mju41-0 c6"
            >
              BliBli
            </div>
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DEPRECATED / Molecules / PillButton (use Button.Pill instead) Pill Button With Different Variants 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
  background-color: transparent;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="Typography__Span-sc-10mju41-0 c1"
    >
      Primary
    </span>
  </div>,
  .c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  margin-left: -4px;
  margin-right: -4px;
}

.c8 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c8 > *:not(:first-child) {
  padding-top: 0;
}

.c11 {
  box-sizing: border-box;
}

.c10 {
  color: currentColor;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c9 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  background-color: #336BFF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5:hover {
  background-color: #2650BF;
}

.c5:active {
  background-color: #1F4099;
}

.c6 {
  border-radius: 12px;
}

.c6::before {
  display: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="row"
  >
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Default
        </span>
      </div>
      <div>
        <button
          className="c4 c5 c6"
          onClick={[Function]}
          type="button"
        >
          <span>
            <div
              className="Typography__Span-sc-10mju41-0 c7"
            >
              Button
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Icon Left
        </span>
      </div>
      <div>
        <button
          className="c4 c5 c6"
          onClick={[Function]}
          type="button"
        >
          <span>
            <div
              className="c8"
            >
              <div
                className="c9"
              >
                <svg
                  aria-hidden="true"
                  className="c10"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  width={16}
                >
                  <path
                    d="M7 9v7h2V9h7V7H9V0H7v7H0v2h7z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                className="c11"
              >
                <div
                  className="Typography__Span-sc-10mju41-0 c7"
                >
                  Button
                </div>
              </div>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Icon Right
        </span>
      </div>
      <div>
        <button
          className="c4 c5 c6"
          onClick={[Function]}
          type="button"
        >
          <span>
            <div
              className="c8"
            >
              <div
                className="c11"
              >
                <div
                  className="Typography__Span-sc-10mju41-0 c7"
                >
                  Button
                </div>
              </div>
              <div
                className="c9"
              >
                <svg
                  aria-hidden="true"
                  className="c10"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  width={16}
                >
                  <path
                    d="M13 11.9l2-2V1H6.1l-2 2h7.486L1.293 13.293l1.414 1.414L13 4.414V11.9z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
  background-color: transparent;
}

@media (min-width:760px) {

}

<div
    className="c0"
  />,
  .c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  margin-left: -4px;
  margin-right: -4px;
}

.c8 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c8 > *:not(:first-child) {
  padding-top: 0;
}

.c11 {
  box-sizing: border-box;
}

.c10 {
  color: currentColor;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c9 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  background-color: #EEEEEE;
  color: #9E9E9E;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c5::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c6 {
  border-radius: 12px;
}

.c6::before {
  display: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="row"
  >
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Default Disabled
        </span>
      </div>
      <div>
        <button
          className="c4 c5 c6"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span>
            <div
              className="Typography__Span-sc-10mju41-0 c7"
            >
              Button
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Icon Left Disabled
        </span>
      </div>
      <div>
        <button
          className="c4 c5 c6"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span>
            <div
              className="c8"
            >
              <div
                className="c9"
              >
                <svg
                  aria-hidden="true"
                  className="c10"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  width={16}
                >
                  <path
                    d="M7 9v7h2V9h7V7H9V0H7v7H0v2h7z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                className="c11"
              >
                <div
                  className="Typography__Span-sc-10mju41-0 c7"
                >
                  Button
                </div>
              </div>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Icon Right Disabled
        </span>
      </div>
      <div>
        <button
          className="c4 c5 c6"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span>
            <div
              className="c8"
            >
              <div
                className="c11"
              >
                <div
                  className="Typography__Span-sc-10mju41-0 c7"
                >
                  Button
                </div>
              </div>
              <div
                className="c9"
              >
                <svg
                  aria-hidden="true"
                  className="c10"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  width={16}
                >
                  <path
                    d="M13 11.9l2-2V1H6.1l-2 2h7.486L1.293 13.293l1.414 1.414L13 4.414V11.9z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>,
  .c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  margin-left: -4px;
  margin-right: -4px;
}

.c8 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c8 > *:not(:first-child) {
  padding-top: 0;
}

.c11 {
  box-sizing: border-box;
}

.c10 {
  color: currentColor;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c9 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  background-color: #336BFF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5:hover {
  background-color: #2650BF;
}

.c5:active {
  background-color: #1F4099;
}

.c6 {
  border-radius: 12px;
}

.c6::before {
  display: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="row"
  >
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Default Loading
        </span>
      </div>
      <div>
        <button
          className="c4 c5 c6"
          onClick={[Function]}
          type="button"
        >
          <span>
            <div
              className="Typography__Span-sc-10mju41-0 c7"
            >
              Button
            </div>
          </span>
          <span />
        </button>
      </div>
    </div>
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Icon Left Loading
        </span>
      </div>
      <div>
        <button
          className="c4 c5 c6"
          onClick={[Function]}
          type="button"
        >
          <span>
            <div
              className="c8"
            >
              <div
                className="c9"
              >
                <svg
                  aria-hidden="true"
                  className="c10"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  width={16}
                >
                  <path
                    d="M7 9v7h2V9h7V7H9V0H7v7H0v2h7z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                className="c11"
              >
                <div
                  className="Typography__Span-sc-10mju41-0 c7"
                >
                  Button
                </div>
              </div>
            </div>
          </span>
          <span />
        </button>
      </div>
    </div>
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Icon Right Loading
        </span>
      </div>
      <div>
        <button
          className="c4 c5 c6"
          onClick={[Function]}
          type="button"
        >
          <span>
            <div
              className="c8"
            >
              <div
                className="c11"
              >
                <div
                  className="Typography__Span-sc-10mju41-0 c7"
                >
                  Button
                </div>
              </div>
              <div
                className="c9"
              >
                <svg
                  aria-hidden="true"
                  className="c10"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  width={16}
                >
                  <path
                    d="M13 11.9l2-2V1H6.1l-2 2h7.486L1.293 13.293l1.414 1.414L13 4.414V11.9z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </span>
          <span />
        </button>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 16px;
  background-color: transparent;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="Typography__Span-sc-10mju41-0 c1"
    >
      Secondary
    </span>
  </div>,
  .c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  margin-left: -4px;
  margin-right: -4px;
}

.c9 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c9 > *:not(:first-child) {
  padding-top: 0;
}

.c12 {
  box-sizing: border-box;
}

.c11 {
  color: currentColor;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c10 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  background-color: transparent;
  color: #336BFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c6::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #336BFF;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c6:hover {
  color: #2650BF;
}

.c6:hover::before {
  border-color: #2650BF;
}

.c6:active {
  color: #1F4099;
}

.c6:active::before {
  border-color: #1F4099;
}

.c7 {
  border-radius: 12px;
  background-color: #F5F5F5;
  color: #336BFF;
}

.c7:hover {
  color: #2650BF;
  background-color: #F5F5F5;
}

.c7:active {
  color: #1F4099;
  background-color: #F5F5F5;
}

.c7::before {
  display: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4 {
  background: white;
  padding: 12px;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="row"
  >
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Default
        </span>
      </div>
      <div>
        <div
          className="c4"
        >
          <button
            className="c5 c6 c7"
            onClick={[Function]}
            type="button"
          >
            <span>
              <div
                className="Typography__Span-sc-10mju41-0 c8"
              >
                Button
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Icon Left
        </span>
      </div>
      <div>
        <div
          className="c4"
        >
          <button
            className="c5 c6 c7"
            onClick={[Function]}
            type="button"
          >
            <span>
              <div
                className="c9"
              >
                <div
                  className="c10"
                >
                  <svg
                    aria-hidden="true"
                    className="c11"
                    focusable="false"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    width={16}
                  >
                    <path
                      d="M7 9v7h2V9h7V7H9V0H7v7H0v2h7z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  className="c12"
                >
                  <div
                    className="Typography__Span-sc-10mju41-0 c8"
                  >
                    Button
                  </div>
                </div>
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Icon Right
        </span>
      </div>
      <div>
        <div
          className="c4"
        >
          <button
            className="c5 c6 c7"
            onClick={[Function]}
            type="button"
          >
            <span>
              <div
                className="c9"
              >
                <div
                  className="c12"
                >
                  <div
                    className="Typography__Span-sc-10mju41-0 c8"
                  >
                    Button
                  </div>
                </div>
                <div
                  className="c10"
                >
                  <svg
                    aria-hidden="true"
                    className="c11"
                    focusable="false"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    width={16}
                  >
                    <path
                      d="M13 11.9l2-2V1H6.1l-2 2h7.486L1.293 13.293l1.414 1.414L13 4.414V11.9z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
  background-color: transparent;
}

@media (min-width:760px) {

}

<div
    className="c0"
  />,
  .c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  margin-left: -4px;
  margin-right: -4px;
}

.c9 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c9 > *:not(:first-child) {
  padding-top: 0;
}

.c12 {
  box-sizing: border-box;
}

.c11 {
  color: currentColor;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c10 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  background-color: #EEEEEE;
  color: #9E9E9E;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c6::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c7 {
  border-radius: 12px;
  background-color: #F5F5F5;
}

.c7::before {
  display: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4 {
  background: white;
  padding: 12px;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="row"
  >
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Default Disabled
        </span>
      </div>
      <div>
        <div
          className="c4"
        >
          <button
            className="c5 c6 c7"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span>
              <div
                className="Typography__Span-sc-10mju41-0 c8"
              >
                Button
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Icon Left Disabled
        </span>
      </div>
      <div>
        <div
          className="c4"
        >
          <button
            className="c5 c6 c7"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span>
              <div
                className="c9"
              >
                <div
                  className="c10"
                >
                  <svg
                    aria-hidden="true"
                    className="c11"
                    focusable="false"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    width={16}
                  >
                    <path
                      d="M7 9v7h2V9h7V7H9V0H7v7H0v2h7z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  className="c12"
                >
                  <div
                    className="Typography__Span-sc-10mju41-0 c8"
                  >
                    Button
                  </div>
                </div>
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Icon Right Disabled
        </span>
      </div>
      <div>
        <div
          className="c4"
        >
          <button
            className="c5 c6 c7"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span>
              <div
                className="c9"
              >
                <div
                  className="c12"
                >
                  <div
                    className="Typography__Span-sc-10mju41-0 c8"
                  >
                    Button
                  </div>
                </div>
                <div
                  className="c10"
                >
                  <svg
                    aria-hidden="true"
                    className="c11"
                    focusable="false"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    width={16}
                  >
                    <path
                      d="M13 11.9l2-2V1H6.1l-2 2h7.486L1.293 13.293l1.414 1.414L13 4.414V11.9z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  .c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  margin-left: -4px;
  margin-right: -4px;
}

.c9 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c9 > *:not(:first-child) {
  padding-top: 0;
}

.c12 {
  box-sizing: border-box;
}

.c11 {
  color: currentColor;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c10 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  background-color: transparent;
  color: #336BFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c6::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #336BFF;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c6:hover {
  color: #2650BF;
}

.c6:hover::before {
  border-color: #2650BF;
}

.c6:active {
  color: #1F4099;
}

.c6:active::before {
  border-color: #1F4099;
}

.c7 {
  border-radius: 12px;
  background-color: #F5F5F5;
  color: #336BFF;
}

.c7:hover {
  color: #2650BF;
  background-color: #F5F5F5;
}

.c7:active {
  color: #1F4099;
  background-color: #F5F5F5;
}

.c7::before {
  display: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-bottom: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4 {
  background: white;
  padding: 12px;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="row"
  >
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Default Loading
        </span>
      </div>
      <div>
        <div
          className="c4"
        >
          <button
            className="c5 c6 c7"
            onClick={[Function]}
            type="button"
          >
            <span>
              <div
                className="Typography__Span-sc-10mju41-0 c8"
              >
                Button
              </div>
            </span>
            <span />
          </button>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Icon Left Loading
        </span>
      </div>
      <div>
        <div
          className="c4"
        >
          <button
            className="c5 c6 c7"
            onClick={[Function]}
            type="button"
          >
            <span>
              <div
                className="c9"
              >
                <div
                  className="c10"
                >
                  <svg
                    aria-hidden="true"
                    className="c11"
                    focusable="false"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    width={16}
                  >
                    <path
                      d="M7 9v7h2V9h7V7H9V0H7v7H0v2h7z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  className="c12"
                >
                  <div
                    className="Typography__Span-sc-10mju41-0 c8"
                  >
                    Button
                  </div>
                </div>
              </div>
            </span>
            <span />
          </button>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="column"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          Icon Right Loading
        </span>
      </div>
      <div>
        <div
          className="c4"
        >
          <button
            className="c5 c6 c7"
            onClick={[Function]}
            type="button"
          >
            <span>
              <div
                className="c9"
              >
                <div
                  className="c12"
                >
                  <div
                    className="Typography__Span-sc-10mju41-0 c8"
                  >
                    Button
                  </div>
                </div>
                <div
                  className="c10"
                >
                  <svg
                    aria-hidden="true"
                    className="c11"
                    focusable="false"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    width={16}
                  >
                    <path
                      d="M13 11.9l2-2V1H6.1l-2 2h7.486L1.293 13.293l1.414 1.414L13 4.414V11.9z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </span>
            <span />
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots DEPRECATED / Molecules / PillButton (use Button.Pill instead) PillButton that is full width 1`] = `
.c1 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c1,
.c1[type='button'],
.c1[type='reset'],
.c1[type='submit'] {
  -webkit-appearance: button;
}

.c1::-moz-focus-inner,
.c1[type='button']::-moz-focus-inner,
.c1[type='reset']::-moz-focus-inner,
.c1[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c1:-moz-focusring,
.c1[type='button']:-moz-focusring,
.c1[type='reset']:-moz-focusring,
.c1[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 4px 12px;
  background-color: #336BFF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c2::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c2:hover {
  background-color: #2650BF;
}

.c2:active {
  background-color: #1F4099;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 4px 12px;
  background-color: transparent;
  color: #336BFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #336BFF;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5:hover {
  color: #2650BF;
}

.c5:hover::before {
  border-color: #2650BF;
}

.c5:active {
  color: #1F4099;
}

.c5:active::before {
  border-color: #1F4099;
}

.c3 {
  border-radius: 12px;
}

.c3::before {
  display: none;
}

.c6 {
  border-radius: 12px;
  background-color: #F5F5F5;
  color: #336BFF;
}

.c6:hover {
  color: #2650BF;
  background-color: #F5F5F5;
}

.c6:active {
  color: #1F4099;
  background-color: #F5F5F5;
}

.c6::before {
  display: none;
}

.c0 {
  background: red;
}

<div
  className="c0"
>
  <button
    className="c1 c2 c3"
    onClick={[Function]}
    type="button"
  >
    <span>
      <div
        className="Typography__Span-sc-10mju41-0 c4"
      >
        Button
      </div>
    </span>
  </button>
  <button
    className="c1 c5 c6"
    onClick={[Function]}
    type="button"
  >
    <span>
      <div
        className="Typography__Span-sc-10mju41-0 c4"
      >
        Button
      </div>
    </span>
  </button>
</div>
`;

exports[`Storyshots DEPRECATED / Molecules / PillButton (use Button.Pill instead) PillButton with loading state 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
  background-color: transparent;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="Typography__Span-sc-10mju41-0 c1"
    >
      Primary
    </span>
  </div>,
  .c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  background-color: #336BFF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c5::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c5:hover {
  background-color: #2650BF;
}

.c5:active {
  background-color: #1F4099;
}

.c6 {
  border-radius: 12px;
}

.c6::before {
  display: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          PillButton
        </span>
      </div>
      <div>
        <button
          className="c4 c5 c6"
          onClick={[Function]}
          type="button"
        >
          <span>
            <div
              className="Typography__Span-sc-10mju41-0 c7"
            >
              Button
            </div>
          </span>
          <span />
        </button>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
  background-color: transparent;
}

@media (min-width:760px) {

}

<div
    className="c0"
  />,
  .c0 {
  margin-bottom: 16px;
  background-color: transparent;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="Typography__Span-sc-10mju41-0 c1"
    >
      Secondary
    </span>
  </div>,
  .c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  background-color: transparent;
  color: #336BFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c6::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #336BFF;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c6:hover {
  color: #2650BF;
}

.c6:hover::before {
  border-color: #2650BF;
}

.c6:active {
  color: #1F4099;
}

.c6:active::before {
  border-color: #1F4099;
}

.c7 {
  border-radius: 12px;
  background-color: #F5F5F5;
  color: #336BFF;
}

.c7:hover {
  color: #2650BF;
  background-color: #F5F5F5;
}

.c7:active {
  color: #1F4099;
  background-color: #F5F5F5;
}

.c7::before {
  display: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4 {
  background: white;
  padding: 12px;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c3"
        >
          PillButton
        </span>
      </div>
      <div>
        <div
          className="c4"
        >
          <button
            className="c5 c6 c7"
            onClick={[Function]}
            type="button"
          >
            <span>
              <div
                className="Typography__Span-sc-10mju41-0 c8"
              >
                Button
              </div>
            </span>
            <span />
          </button>
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
  background-color: transparent;
}

@media (min-width:760px) {

}

<div
    className="c0"
  />,
  @media (min-width:760px) {

}

<button
    onClick={[Function]}
    type="button"
  >
    toggle loading
  </button>,
]
`;

exports[`Storyshots DEPRECATED / Molecules / PillButton (use Button.Pill instead) PillButton with loading state without the spinner animation delay 1`] = `
.c0 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c0,
.c0[type='button'],
.c0[type='reset'],
.c0[type='submit'] {
  -webkit-appearance: button;
}

.c0::-moz-focus-inner,
.c0[type='button']::-moz-focus-inner,
.c0[type='reset']::-moz-focus-inner,
.c0[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0:-moz-focusring,
.c0[type='button']:-moz-focusring,
.c0[type='reset']:-moz-focusring,
.c0[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4 {
  display: inline-block;
  -webkit-animation: spinner 0.6s linear infinite;
  animation: spinner 0.6s linear infinite;
}

.c5 {
  display: block;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  background-color: #336BFF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c1::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c1:hover {
  background-color: #2650BF;
}

.c1:active {
  background-color: #1F4099;
}

.c2 {
  border-radius: 12px;
}

.c2::before {
  display: none;
}

<button
  className="c0 c1 c2"
  onClick={[Function]}
  type="button"
>
  <span>
    <div
      className="Typography__Span-sc-10mju41-0 c3"
    >
      Button
    </div>
  </span>
  <span>
    <span
      className="c4"
    >
      <svg
        className="c5"
        height={12}
        viewBox="0 0 24 24"
        width={12}
      >
        <defs>
          <linearGradient
            id="spinner-spinner-primary-s-undefined-1"
            x1="50%"
            x2="50%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stopColor="#FFFFFF"
              stopOpacity="0"
            />
            <stop
              offset="100%"
              stopColor="#FFFFFF"
              stopOpacity=".5"
            />
          </linearGradient>
          <linearGradient
            id="spinner-spinner-primary-s-undefined-2"
            x1="50%"
            x2="50%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stopColor="#FFFFFF"
              stopOpacity=".5"
            />
            <stop
              offset="100%"
              stopColor="#FFFFFF"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M12,0 C18.627417,0 24,5.372583 24,12 C24,18.627417 18.627417,24 12,24 M12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3"
            fill="url(#spinner-spinner-primary-s-undefined-1)"
          />
          <path
            d="M0,0 C6.627417,0 12,5.372583 12,12 C12,18.627417 6.627417,24 0,24 M0,21 C4.97056275,21 9,16.9705627 9,12 C9,7.02943725 4.97056275,3 0,3"
            fill="url(#spinner-spinner-primary-s-undefined-2)"
            transform="rotate(-180 6 12)"
          />
        </g>
      </svg>
    </span>
  </span>
</button>
`;

exports[`Storyshots DEPRECATED / Molecules / PillButton (use Button.Pill instead) PillButtons composed in a group 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -4px;
  margin-right: -4px;
}

.c0 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 4px 12px;
  background-color: #336BFF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c4::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c4:hover {
  background-color: #2650BF;
}

.c4:active {
  background-color: #1F4099;
}

.c7 {
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 4px 12px;
  background-color: transparent;
  color: #336BFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c7::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #336BFF;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c7:hover {
  color: #2650BF;
}

.c7:hover::before {
  border-color: #2650BF;
}

.c7:active {
  color: #1F4099;
}

.c7:active::before {
  border-color: #1F4099;
}

.c5 {
  border-radius: 12px;
}

.c5::before {
  display: none;
}

.c8 {
  border-radius: 12px;
  background-color: #F5F5F5;
  color: #336BFF;
}

.c8:hover {
  color: #2650BF;
  background-color: #F5F5F5;
}

.c8:active {
  color: #1F4099;
  background-color: #F5F5F5;
}

.c8::before {
  display: none;
}

.c2 {
  background: white;
  padding: 12px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <button
        className="c3 c4 c5"
        onClick={[Function]}
        type="button"
      >
        <span>
          <div
            className="Typography__Span-sc-10mju41-0 c6"
          >
            Submit
          </div>
        </span>
      </button>
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <button
        className="c3 c7 c8"
        onClick={[Function]}
        type="button"
      >
        <span>
          <div
            className="Typography__Span-sc-10mju41-0 c6"
          >
            Reset
          </div>
        </span>
      </button>
    </div>
  </div>
</div>
`;
